--- a/.github/workflows/master_VisblueServiceAppTesting.yml
+++ b/.github/workflows/master_VisblueServiceAppTesting.yml
@@ -24,8 +24,10 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm i mocha
         npm run build --if-present
         npm run test --if-present
+        
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
